2008-04-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Add/reorder a recent file item when closing a document.
 * src/utils.c:
   Make utils_is_absolute_path() a NULL-safe version of
   g_path_is_absolute().


2008-04-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.xml, data/filetypes.javascript, src/highlighting.c:
   Unify the embedded JavaScript styles with the styles of the
   JavaScript filetype for a more consistent styling of JavaScript in
   general.


2008-04-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Make utils_get_file_list() use a case-insensitive search so that the
   file browser lists files and directories in a more intuitive order.
 * src/project.c:
   Fix build because of wrong document_close_all() usage - oops.
 * src/callbacks.c, src/document.c, src/document.h:
   Move Close All functions to document.c.
   Add document_account_for_unsaved().


2008-04-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c, src/project.h, src/geany.h, src/keyfile.c,
   src/symbols.c, src/editor.h, doc/geany.txt, doc/geany.html:
   Move non-general compile-time constants into their relevant source
   files.
 * src/utils.c, src/interface.c, src/prefs.c, src/prefs.h, src/keyfile.c,
   geany.glade:
   Make disk check timeout configurable in the prefs dialog Files tab.
   Make a value of zero disable disk checks.
 * src/project.c, src/document.c, src/document.h:
   Add document_close_all() and use it in project.c.


2008-04-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/plugins.c:
   Fix GLib warning when starting with a new config.
 * src/prefs.c:
   Fix wrong usage of gtk_file_chooser_get_filename() in callback of
   Open File dialogs in the preferences dialog.
 * plugins/autosave.c, src/search.c, src/document.c:
   Make use of ngettext() for strings with plural forms.
 * Makefile.am: